fix(content): fix sidebar collapse

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -13,6 +13,8 @@
 
 .wrap {
   min-height: 100%;
+  display: flex;
+  flex-direction: column;
   position: absolute;
   left: 0;
   right: 0;
@@ -28,7 +30,7 @@
 }
 
 .content {
-  min-height: 100%;
+  flex-grow: 1;
   // 20px for footer height
   padding: $content-padding $content-padding ($content-padding + 20px);
   background-color: $body-bg;
